# linux-std

./: README.md
01_pipe/: 01.cpp  Makefile  README.md
02_fifo/: 01.cpp  01.d  Makefile  README.md
04_pthread/: 01-02_01.uml  01-03_01.uml  01.cpp  Makefile  README.md
05_msgsnd_rcv/: 01.cpp  02.cpp  03.cpp  04.cpp  Makefile  README.md
05_msgsnd_rcv/simple_sample/: mymsg.h  simple_sample_sysv_ipc.srctrldb  simple_sample_sysv_ipc.srctrlprj
05_msgsnd_rcv/simple_sample/receiver/: receiver.cpp
05_msgsnd_rcv/simple_sample/sender/: sender.cpp
XX_inotify/: 01.cpp  README.md
XX_mmap/: 01.cpp  Makefile
XX_mq/01_mq_open/src/: main.cpp
XX_mq/02_mq_unlink/src/: main.cpp
XX_mq/03_notify/: CMakeLists.txt
XX_mq/03_notify/src/: main.cpp
XX_mq/04_patterns/01_sent_before_waiting/: README.md  main.cpp
XX_mq/XX_simple/: mymsg.h
XX_mq/XX_simple/receiver/: receiver.h
XX_mq/XX_simple/sender/: sender.h
XX_sem/01_named/: CMakeLists.txt
XX_sem/01_named/src/: main.cpp  main2.cpp
XX_sem/02_unnamed/: CMakeLists.txt
XX_sem/02_unnamed/src/: main.cpp
XX_shm/: 01.cpp  02.cpp  03.cpp  Makefile
XX_signal/: main.cpp
XX_signal/01_basic/: CMakeLists.txt
XX_signal/01_basic/src/: main.cpp  ready.cpp
XX_signal/02_sigact/src/: main.cpp
XX_signal/03_restart/: CMakeLists.txt
XX_signal/03_restart/src/: main.cpp
XX_signal/04_mask-pend/src/: main.cpp
XX_signal/05_pause/src/: main.cpp
XX_signal/06_sa_siginfo/src/: main.cpp
XX_signal/07_rt_signal/src/: main.cpp
XX_signal/08_suspend/src/: main.cpp
XX_signal/09_waitinfo/src/: main.cpp
XX_socket/: README.md
XX_socket/01_basic_unixdomain/: README.md
XX_socket/01_basic_unixdomain/client/: CMakeLists.txt  client.cpp
XX_socket/01_basic_unixdomain/server/: CMakeLists.txt  a.out  server  server.cpp
XX_socket/02_basic_inet/: README.md
XX_socket/02_basic_inet/client/: CMakeLists.txt  (+1 more)
XX_socket/02_basic_inet/server/: CMakeLists.txt  server.cpp
XX_socket/03_ssl_inet/: CMakeLists.txt  README.md
(+7 files in other folders)
